2006-06-07  David Hampton  <hampton@employees.org>

	* src/business/business-gnome/business-gnome.scm: Restore the
	business reports menu.

2006-06-06  David Hampton  <hampton@employees.org>

	* src/business/business-gnome/glade/billterms.glade: Hide notebook
	tabs on programmatically changed notebook.

2006-06-05  Chris Lyttle  <chris@wilddev.net>

	* packaging/gnucash-1.9.x.ebuild: Update to use -docs-1.9.0

2006-06-05  Chris Lyttle  <chris@wilddev.net>

	* NEWS: Added some text about the release.
	* configure.in: Change to version 1.9.7

2006-06-05  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-menu-extensions.c: Fix "missing icon" menu
	icons on FC6.

2006-06-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-icons.c:
	* src/gnome-utils/test/test-gnc-dialog.c: Include "config.h".

2006-06-04  Derek Atkins  <derek@ihtfp.com>

	* configure.in:
	* various Makefile.am files:
	  Move the GLIB26 compatibility checks to configure.in.
	  Just modify GLIB_LIBS and GLIB_CFLAGS so everyone properly
	  links against the glib26 compatibility library when necessary.

2006-06-04  David Hampton  <hampton@employees.org>

	* various Makefile.am files: Don't ever reference lib/glib26 if
	the host system has glib 2.6 or better installed.

	* various Makefile.am files: Add lib/glib26 to the include and
	library paths.

	* src/gnome-utils/gnc-plugin-page.h: Include gkeyfile.h instead of
	explicitly declaring a data type. This prevents include file
	ordering problems.

2006-06-04  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/gnc-plugin-file-history.c:
	  swap the #includes so it builds on FC3 w/ glib-2.4

2006-06-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/gnc-plugin-file-history.c: If the g2 file
	history list is empty, then copy the file history list over from
	Gnucash 1.x gnome settings file.  #342724.

2006-06-04  Joshua Sled  <jsled@asynchronous.org>
