@@ -41,9 +41,6 @@
 #include "gkeyfile.h"
 #endif
 #include "gtk-compat.h"
-#ifdef HAVE_VALGRIND_CALLGRIND_H
-#include <valgrind/callgrind.h>
-#endif
 
 #include "gnc-plugin.h"
 #include "gnc-plugin-manager.h"
@@ -127,7 +124,6 @@ static void gnc_main_window_cmd_view_refresh (GtkAction *action, GncMainWindow *
 static void gnc_main_window_cmd_view_toolbar (GtkAction *action, GncMainWindow *window);
 static void gnc_main_window_cmd_view_summary (GtkAction *action, GncMainWindow *window);
 static void gnc_main_window_cmd_view_statusbar (GtkAction *action, GncMainWindow *window);
-static void gnc_main_window_cmd_extensions_callgrind (GtkAction *action, GncMainWindow *window);
 static void gnc_main_window_cmd_actions_reset_warnings (GtkAction *action, GncMainWindow *window);
 static void gnc_main_window_cmd_actions_rename_page (GtkAction *action, GncMainWindow *window);
 static void gnc_main_window_cmd_window_new (GtkAction *action, GncMainWindow *window);
@@ -314,9 +310,6 @@ static GtkToggleActionEntry toggle_actions [] =
 	{ "ViewStatusbarAction", NULL, N_("Stat_us Bar"), NULL,
 	  N_("Show/hide the status bar on this window"),
 	  G_CALLBACK (gnc_main_window_cmd_view_statusbar), TRUE },
-	{ "ExtensionsCallgrindAction", NULL, "Use Callgrind", NULL,
-	  "Enable/disable the Valgrind/Callgrind profiling tool.",
-	  G_CALLBACK (gnc_main_window_cmd_extensions_callgrind), FALSE },
 };
 /** The number of toggle actions provided by the main window. */
 static guint n_toggle_actions = G_N_ELEMENTS (toggle_actions);
@@ -375,9 +368,6 @@ static const gchar *initially_insensitive_actions[] = {
 static const gchar *always_hidden_actions[] = {
 	"ViewSortByAction",
 	"ViewFilterByAction",
-#ifndef HAVE_VALGRIND_CALLGRIND_H
-	"ExtensionsCallgrindAction",
-#endif
 	NULL
 };
 
@@ -3076,32 +3066,6 @@ gnc_main_window_cmd_view_statusbar (GtkAction *action, GncMainWindow *window)
 	} else {
 		gtk_widget_hide (priv->statusbar);
 	}
-}
-
-static void
-gnc_main_window_cmd_extensions_callgrind (GtkAction *action, GncMainWindow *window)
-{
-#ifdef HAVE_VALGRIND_CALLGRIND_H
-	static GTimeVal start, end;
-
-	if (gtk_toggle_action_get_active(GTK_TOGGLE_ACTION(action))) {
-	  g_print("Start timing.\n");
-	  g_get_current_time(&start);
-	  CALLGRIND_START_INSTRUMENTATION();
-	  CALLGRIND_TOGGLE_COLLECT();
-	} else {
-	  CALLGRIND_TOGGLE_COLLECT();
-	  CALLGRIND_STOP_INSTRUMENTATION();
-	  g_get_current_time(&end);
-	  if (start.tv_usec > end.tv_usec) {
-	    end.tv_usec += 1000000;
-	    end.tv_sec  -= 1;
-	  }
-	  g_print("Callgrind enabled for %d.%6d seconds.\n",
-		 (int)(end.tv_sec - start.tv_sec),
-		 (int)(end.tv_usec - start.tv_usec));
-	}
-#endif
 }
 
 static void
